# kingfisher-collect

./: .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  docker_scrapy.cfg  env.sh.tmpl  kingfisher-collect.env  metaalembic.ini  ocdskingfisher-old-cli  ocdskingfisher-scrape-cli  pyproject.toml  requirements.in  requirements.txt  requirements.txt.sha256  requirements_base.in  requirements_base.txt  requirements_dev.in  requirements_dev.txt  requirements_scrapy.txt  requirements_scrapycloud.txt  run_scrapyd.sh  sample_old_config.ini  scrapinghub.yml  scrapy.cfg  setup.cfg  setup.py  test_delayed_request_middleware.py
.github/ISSUE_TEMPLATE/: new-spider.md  unavailable-spider.md
.github/workflows/: automerge.yml  ci.yml  lint.yml  nonlinux.yml
docs/: cli.rst  conf.py  crawl-report-guide.rst  history.rst  index.rst  kingfisher_process.rst  local.rst  logs.rst  old.rst  requirements.txt  run-report-guide.rst  scrapyd.rst  setup.rst  sources.rst  spiders.rst  use-hosted.rst  use-scrapinghub.rst  use-scrapycloud.rst  use-scrapyd.rst  use-standalone.rst  use.rst  writing-scrapers.rst  writing-spiders.rst
docs/_static/: basic.css
docs/_templates/: layout.html
docs/api/: base_spider.rst  exceptions.rst  index.rst  util.rst
docs/cli/: index.rst  log-dir-scrape-report.rst  scrape-report.rst
docs/contributing/: base_spider.rst  downloadermiddlewares.rst  downloadhandlers.rst  extensions.rst  index.rst  middlewares.rst  pipelines.rst  spidermiddlewares.rst
docs/use-cases/: index.rst  local.rst  private.rst  scrapyd.rst
kingfisher_scrapy/: base_spider.py  downloadermiddlewares.py  downloadhandlers.py  exceptions.py  extensions.py  item_schema.json  items.py  kingfisher_process.py  log_formatter.py  middlewares.py  pipelines.py  responses.py  scrape_report.py  settings.py  spidermiddlewares.py  util.py
kingfisher_scrapy/base_spiders/: __init__.py  base_spider.py  big_file_spider.py  ckan_spider.py  compressed_file_spider.py  index_spider.py  links_spider.py  (+2 more)
ocdskingfisher/: base.py  config.py  metadata_db.py  sources_util.py  util.py
tests/: __init__.py  conftest.py  test_base_spider.py  test_big_file_spider.py  test_compressed_file_spider.py  test_downloadhandlers.py  test_extensions.py  test_flattend_spider.py  test_index_spider.py  test_items.py  test_latest_release_date.py  test_links_spider.py  test_periodic_spider.py  test_periodical_spider.py  test_pipelines.py  test_scrape_report.py  test_settings.py  test_spidermiddlewares.py  test_spiders.py  test_util.py  test_validate.py  test_zip_spider.py
(+512 files in other folders)
