[project]
name = "kingfisher-collect"
version = "0.0.0"

[project.entry-points.scrapy]
settings = "kingfisher_scrapy.settings"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
kingfisher_scrapy = ["schema/*.json"]

[tool.isort]
profile = "black"
line_length = 119

[tool.pytest.ini_options]
addopts = "--doctest-modules"
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["*/kingfisher_scrapy/spiders/*"]
