[project]
name = "kingfisher-collect"
version = "0.0.0"

[project.entry-points.scrapy]
settings = "kingfisher_scrapy.settings"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
kingfisher_scrapy = ["schema/*.json"]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["E", "C4", "F", "I", "W"]

[tool.coverage.run]
omit = ["*/kingfisher_scrapy/spiders/*"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
asyncio_mode = "auto"

[tool.uv.pip]
python-platform = "linux"  # greenlet
