[project]
name = "kingfisher-collect"
version = "0.0.0"

# Entry points and setuptools configurations are needed by scrapyd-client.
# https://github.com/scrapy/scrapyd-client/blob/master/README.rst
[project.entry-points.scrapy]
settings = "kingfisher_scrapy.settings"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
kingfisher_scrapy = ["schema/*.json"]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "ARG002",  # scrapy
    "D1", "D205",
    "DTZ",
    "FIX002",  # todo
    "PLR2004",  # magic
    "PLW2901",
    "PTH",
    "RUF012",  # scrapy
    "TRY003",  # errors
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]

[tool.ruff.lint.flake8-self]
extend-ignore-names = ["_job"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["D100", "INP001"]
"*/spiders/*" = ["D400", "D401"]
"*/settings.py" = ["ERA001"]  # commented-out code
"tests/*" = [
    "ARG001", "D", "FBT003", "INP001", "PLR2004", "S", "TRY003",
]
"test_*" = ["ARG001", "S"]

[tool.coverage.run]
omit = ["*/kingfisher_scrapy/spiders/*"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --reactor=asyncio"

[tool.uv.pip]
python-platform = "linux"  # greenlet
